--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,15 +14,13 @@ jobs:
     - name: Get repo
       id: repo
       run: |
-        repo=$(echo ${{ github.event.inputs.action }} | sed -e "s/^https:\/\/github.com\///")
-        path=$(basename $repo)
-        echo "::set-output name=repo::$repo"
+        path=$(basename ${{ github.event.inputs.action }})
         echo "::set-output name=path::$path"
 
     - name: Checkout
       uses: actions/checkout@v2
       with:
-        repository: ${{ steps.repo.outputs.repo }}
+        repository: ${{ github.event.inputs.action }}
 
     - name: Build
       id: build
